data/derived/comb/progs/unify/prog4875.ml.out
Characters 138-142:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type (int * 'c list) list
